<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openseekthermal</name>
  <version>1.0.0</version>
  <description>An open driver for SeekThermal thermal cameras.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
