<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openseekthermal</name>
  <version>1.0.0</version>
  <description>An open driver for SeekThermal thermal cameras.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <exec_depend>libusb-1.0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
