<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openseekthermal_gstreamer</name>
  <version>1.0.0</version>
  <description>GStreamer elements for SeekThermal cameras using OpenSeekThermal.</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>openseekthermal</depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
